--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,18 @@ header {
     text-align: center;
     padding: 20px 0;
     font-family: 'Edu TAS Beginner', cursive;
-    font-size: 1px;
+    /* font-size: 1px; */
+}
+
+header ul  {
+    
+    display: flex;
+    /* justify-content:space-around; */
+    list-style: none;
+}
+
+li {
+    margin-right: 1rem;
 }
 
 .container {
@@ -51,7 +62,7 @@ a {
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
-    margin-top: 20px;
+    margin: 1rem;
 }
 
 a:hover {
@@ -112,11 +123,12 @@ label {
 
 /* Styles for form input fields */
 input {
-    width: 100%;
+    width: 90%;
     padding: 10px;
     margin-top: 5px;
     border: 1px solid #ddd;
     border-radius: 5px;
+
 }
 
 /* Styles for the "Inscription" button */
@@ -127,6 +139,7 @@ button {
     border: none;
     border-radius: 5px;
     margin-top: 10px;
+    
 }
 
 button:hover {
